--- a/.github/workflows/appveyor.yml
+++ b/.github/workflows/appveyor.yml
@@ -14,8 +14,7 @@ image:
     - pip install -r requirements.txt
     
     build_script:
-    - flet pack main.py --name counter --icon icon.png --product-name counter --product-version "1.2.3" --copyright "Copyright (c) 2022 YourCompany Inc."
-    
+    - flet pack Syncogram/application.py --name Syncogram     
     test: off
     
     # Publish artifacts to GitHub Releases on "tag" builds
