--- a/.github/workflows/appveyor.yml
+++ b/.github/workflows/appveyor.yml
@@ -14,7 +14,7 @@ image:
     - pip install -r requirements.txt
     
     build_script:
-    - flet pack Syncogram/application.py --name Syncogram     
+    - flet pack Syncogram\application.py --name Syncogram     
     test: off
     
     # Publish artifacts to GitHub Releases on "tag" builds
