--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: sudo apt --yes update && sudo apt --yes upgrade && sudo apt --yes dist-upgrade
+      # - run: sudo apt --yes update && sudo apt --yes upgrade && sudo apt --yes dist-upgrade
     #   - run: sudo apt-get --yes --allow install libpython3.10-dev
       - name: Clone GitHub Repository
         uses: actions/checkout@v3
