--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
           --copyright "GPL-3.0" \
           --file-version "${{ env.json_APP_VERSION }}" \
           --add-binary locales:locales \
-          --dispatch ../craft;
+          --distpath ../craft;
           cd ../;
           
       - name: Archive Windows Application
@@ -90,7 +90,7 @@ jobs:
           --copyright "GPL-3.0" \
           --file-version "${{ env.json_APP_VERSION }}" \
           --add-binary locales:locales \
-          --dispatch ../craft;
+          --distpath ../craft;
           cd ../;
           
       - name: Archive Linux Application
@@ -138,7 +138,7 @@ jobs:
           --copyright "GPL-3.0" \
           --file-version "${{ env.json_APP_VERSION }}" \
           --add-binary locales:locales \
-          --dispatch ../craft;
+          --distpath ../craft;
           cd ../;
 
       - name: Archive MacOS Application
