--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,15 +28,18 @@ jobs:
         uses: rgarcia-phi/json-to-variables@v1.1.0
         with:
           filename: ${{ env.JSON_CONFIG_PATH }}
-          
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
-
-      - name: Start Build Application
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - run: |
+          
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Start Build Application
+        run: |
           cd Syncogram
           flet pack application.py `
           --name "Syncogram" `
@@ -50,7 +53,7 @@ jobs:
           --add-data assets:assets `
           --add-data config.json:. `
           --distpath ../craft
-          cd ../
+          cd ..\
           
       - name: Archive Windows Application
         run: |
